# svenint

./: .gitmodules  LICENSE  README.md  changelog.txt  config.cpp  config.h  friends.cpp  friends.h  glsl2c.pl  hashes.cpp  hashes.h  patterns.cpp  patterns.h  plugin.cpp  plugin.h  shaders_to_bytes.bat  sven_internal.dll.vmp  sven_internal.sln  sven_internal.vcxproj  sven_internal.vcxproj.filters
autoupdate/: .gitignore  CMakeLists.txt  bin2c.pl  build_project_linux.sh  build_project_win.bat  generate_app_info.pl  generate_project_win.bat  svenint_autoupdate  svenint_autoupdate_server
autoupdate/client/: CMakeLists.txt  au_client.cpp  au_client.h  autoupdate.cpp  autoupdate.h
autoupdate/file/: .gitignore
autoupdate/server/: CMakeLists.txt  au_client.cpp  au_client.h  au_server.cpp  au_server.h  main.cpp
autoupdate/shared/: au_app_info.h  au_app_version.h  au_platform.h  au_protocol.cpp  au_protocol.h  au_socket.cpp  au_socket.h  au_utils.cpp  au_utils.h
autoupdate/src/: .gitignore  au_app_raw.c  au_app_raw.h  main.cpp
cryptopp/: Filelist.txt  Readme.txt  cryptlib.h  cryptlib.vcxproj  cryptlib.vcxproj.filters  cryptopp.rc  datatest.cpp  queue.h  secblock.h
features/: aim.cpp  aim.h  antiafk.cpp  antiafk.h  bsp.cpp  bsp.h  camhack.cpp  camhack.h  capture.cpp  capture.h  chams.cpp  chams.h  chat_colors.cpp  chat_colors.h  custom_vote_popup.cpp  custom_vote_popup.h  dynamic_glow.cpp  dynamic_glow.h  edge_pixels_player.cpp  edge_pixels_player.h  firstperson_roaming.cpp  firstperson_roaming.h  flashlight.cpp  flashlight.h  input_manager.cpp  input_manager.h  keyspam.cpp  keyspam.h  menu_colors.cpp  menu_colors.h  message_spammer.cpp  message_spammer.h  midi_sound_player.cpp  midi_sound_player.h  misc.cpp  misc.h  models_manager.cpp  models_manager.h  movement_recorder.cpp  movement_recorder.h  (+16 more)
game/: aim_prediction.cpp  aim_prediction.h  bspfile.h  class_table.cpp  class_table.h  demo_message.cpp  demo_message.h  draw_context.cpp  draw_context.h  drawing.cpp  drawing.h  entitylist.cpp  entitylist.h  structs.h  utils.cpp  utils.h
glew/: .gitignore
imgui_custom/: imgui_custom.cpp  imgui_custom.h
modules/: hooks.cpp  hooks.h  menu.cpp  menu.h  opengl.cpp  opengl.h  patches.cpp  patches.h  server.cpp  server.h  server_client_bridge.cpp  server_client_bridge.h
resources/: svencoop.rar
resources/sven_internal/: chat_colors_players.txt
resources/sven_internal/message_spammer/: bunny.txt  test.txt  test2.txt
resources/sven_internal/models_manager/: ignored_players.txt  random_models.txt  target_players.txt
resources/sven_internal/scripts/: main.lua  test.lua
resources/svencoop/: sven_internal.cfg
resources/svencoop/sven_internal/shaders/: bokeh.fsh  chromatic_aberration.fsh  depth_buffer.fsh  dof_blur.fsh  gaussian_blur.fsh  gaussian_blur_16x.fsh  pp_fullscreen.vsh  vignette.fsh
resources/svencoop/sven_internal/shaders/no version/: bloom.fsh  chromatic_aberration.fsh  color_correction.fsh  dof_blur.fsh  gaussian_blur_fast.fsh  (+3 more)
resources/svencoop/sven_internal/tex/: hitmarker.tga  radar_round.tga
scripts/: lua_cvar.cpp  lua_cvar.h  lua_debug.cpp  lua_debug.h  lua_entity_dictionary.cpp  lua_entity_dictionary.h  lua_entity_vars.cpp  lua_entity_vars.h  lua_global_vars.cpp  lua_global_vars.h  lua_input_manager.cpp  lua_input_manager.h  lua_logic.cpp  lua_logic.h  lua_mod.cpp  lua_mod.h  lua_player_move.cpp  lua_player_move.h  lua_random.cpp  lua_random.h  lua_triggers.cpp  lua_triggers.h  lua_usercmd.cpp  lua_usercmd.h  lua_vector.cpp  lua_vector.h  scripts.cpp  scripts.h  scripts_binding.cpp  scripts_binding.h
scripts/lua/: lua.hpp
steam/: steamtypes.h
strafe/: strafe.cpp  strafe.h
svenmod/lib/public/: common.lib  convar.lib
svenmod/public/: convar.h
svenmod/public/hl_sdk/engine/: eiface.h
svenmod/shared/: messagebuffer.cpp
svenmod/svenmod/: game_hooks.cpp  render.cpp  render.h
utils/: antidebug.cpp  antidebug.h  antidebug.hpp  demo_message.cpp  demo_message.h  hashes.cpp  menu_fonts.hpp  menu_styles.cpp  menu_styles.h  patcher.cpp  patcher.h  security.cpp  security.hpp  shaders.cpp  shaders.h  xorstr.h
utils/shaders/: bloom_raw.c  bloom_raw.h  bokeh_raw.c  bokeh_raw.h  chromatic_aberration_raw.c  chromatic_aberration_raw.h  color_correction_raw.c  color_correction_raw.h  depth_buffer_raw.c  depth_buffer_raw.h  dof_blur_raw.c  dof_blur_raw.h  gaussian_blur_fast_raw.c  gaussian_blur_fast_raw.h  gaussian_blur_raw.c  gaussian_blur_raw.h  godrays_raw.c  godrays_raw.h  pp_fullscreen_raw.c  pp_fullscreen_raw.h  radial_blur_raw.c  radial_blur_raw.h  shaders_raw.h  ssao_raw.c  ssao_raw.h  vignette_raw.c  vignette_raw.h
